--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "npm": "^10.9.1",
     "path": "^0.12.7",
     "pdfkit": "^0.15.1",
+    "sanitize-html": "^2.14.0",
     "xlsx": "^0.18.5",
     "xml2js": "^0.6.2"
   }
